--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" 
     fields:
-      - { label: "Заголовок", name: "title", widget: "string" }
-      - { label: "Дата", name: "date", widget: "datetime" }
-      - { label: "Содержание", name: "body", widget: "markdown" }
-      - { label: "Изображение", name: "thumbnail", widget: "image" }
+      - { label: "title", name: "title", widget: "string" }
+      - { label: "date", name: "date", widget: "datetime" }
+      - { label: "body", name: "body", widget: "markdown" }
+      - { label: "image", name: "thumbnail", widget: "image" }
 
 publish_mode: editorial_workflow 
